--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -15,7 +15,8 @@
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-headroom": "^3.2.1"
+    "react-headroom": "^3.2.1",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
