--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@clerk/clerk-react": "^4.30.7",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
