--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^4.30.7",
     "@studio-freight/lenis": "^1.0.42",
     "aos": "^2.3.4",
+    "dotenv": "^16.4.5",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
