--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -18,7 +18,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.1",
-    "react-router-dom": "^6.22.3"
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
+    "use-history": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
