--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -13,9 +13,11 @@
     "@clerk/clerk-react": "^4.30.7",
     "@studio-freight/lenis": "^1.0.42",
     "aos": "^2.3.4",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
+    "react-date-object": "^2.1.8",
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.1",
     "react-router": "^6.22.3",
