--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -22,7 +22,8 @@
     "react-headroom": "^3.2.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
-    "use-history": "^1.4.1"
+    "use-history": "^1.4.1",
+    "vercel": "^33.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
