--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.30.7",
+    "@emailjs/browser": "^4.3.3",
     "@studio-freight/lenis": "^1.0.42",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
@@ -22,6 +23,7 @@
     "react-headroom": "^3.2.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "use-history": "^1.4.1",
     "vercel": "^33.7.0"
   },
