--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -16,15 +16,18 @@
     "aos": "^2.3.4",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "firebase": "^10.11.1",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-date-object": "^2.1.8",
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.1",
+    "react-hot-toast": "^2.4.1",
     "react-router": "^6.22.3",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "use-history": "^1.4.1",
+    "uuid": "^9.0.1",
     "vercel": "^33.7.0"
   },
   "devDependencies": {
